# Systeme_surveillance_thermique

./: CMakeLists.txt  Readme.md  diagram.json  main_arduino.ino  wokwi-project.txt
src/: buffer.c  buffer.h  sensor.c  sensor.h  ventilation.c  ventilation.h
